// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`importTraceEvents bad E events 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 2,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "beta",
      "line": undefined,
      "name": "beta",
      "selfWeight": 12,
      "totalWeight": 12,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "alpha 1.00µs",
    "alpha;beta 12.00µs",
    "alpha 1.00µs",
  ],
}
`;

exports[`importTraceEvents bad E events: indexToView 1`] = `0`;

exports[`importTraceEvents bad E events: profileGroup.name 1`] = `"too-many-end-events.json"`;

exports[`importTraceEvents end event with empty stack 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "alpha 1.00µs",
  ],
}
`;

exports[`importTraceEvents end event with empty stack: indexToView 1`] = `0`;

exports[`importTraceEvents end event with empty stack: profileGroup.name 1`] = `"end-event-with-empty-stack.json"`;

exports[`importTraceEvents end-non-top-of-stack 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "A {\\"x\\":1}",
      "line": undefined,
      "name": "A {\\"x\\":1}",
      "selfWeight": 1,
      "totalWeight": 11,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "B {\\"x\\":2}",
      "line": undefined,
      "name": "B {\\"x\\":2}",
      "selfWeight": 9,
      "totalWeight": 10,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "Z {\\"x\\":1}",
      "line": undefined,
      "name": "Z {\\"x\\":1}",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "A {\\"x\\":1} 1.00µs",
    "A {\\"x\\":1};B {\\"x\\":2} 9.00µs",
    "A {\\"x\\":1};B {\\"x\\":2};Z {\\"x\\":1} 1.00µs",
  ],
}
`;

exports[`importTraceEvents end-non-top-of-stack: indexToView 1`] = `0`;

exports[`importTraceEvents end-non-top-of-stack: profileGroup.name 1`] = `"end-non-top-of-stack.json"`;

exports[`importTraceEvents event re-ordering 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "A",
      "line": undefined,
      "name": "A",
      "selfWeight": 2,
      "totalWeight": 6,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "B",
      "line": undefined,
      "name": "B",
      "selfWeight": 2,
      "totalWeight": 4,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "C",
      "line": undefined,
      "name": "C",
      "selfWeight": 2,
      "totalWeight": 2,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "X",
      "line": undefined,
      "name": "X",
      "selfWeight": 3,
      "totalWeight": 3,
    },
  ],
  "name": "pid 0, tid 1",
  "stacks": Array [
    "A;B;C 1.00µs",
    "A;B 1.00µs",
    "A 1.00µs",
    " 1.00µs",
    "A 1.00µs",
    "A;B 1.00µs",
    "A;B;C 1.00µs",
    "X 3.00µs",
  ],
}
`;

exports[`importTraceEvents event re-ordering: indexToView 1`] = `0`;

exports[`importTraceEvents event re-ordering: profileGroup.name 1`] = `"must-retain-original-order.json"`;

exports[`importTraceEvents mismatched args 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "A {\\"x\\":1}",
      "line": undefined,
      "name": "A {\\"x\\":1}",
      "selfWeight": 10,
      "totalWeight": 10,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "A {\\"x\\":1} 10.00µs",
  ],
}
`;

exports[`importTraceEvents mismatched args: indexToView 1`] = `0`;

exports[`importTraceEvents mismatched args: profileGroup.name 1`] = `"mismatched-args.json"`;

exports[`importTraceEvents mismatched name 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 0,
      "totalWeight": 0,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [],
}
`;

exports[`importTraceEvents mismatched name: indexToView 1`] = `0`;

exports[`importTraceEvents mismatched name: profileGroup.name 1`] = `"mismatched-name.json"`;

exports[`importTraceEvents multiprocess 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "p0 (pid 0), p0t0 (tid 0)",
  "stacks": Array [
    "alpha 1.00µs",
  ],
}
`;

exports[`importTraceEvents multiprocess 2`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "beta",
      "line": undefined,
      "name": "beta",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "p0 (pid 0), p0t1 (tid 1)",
  "stacks": Array [
    "beta 1.00µs",
  ],
}
`;

exports[`importTraceEvents multiprocess 3`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "gamma",
      "line": undefined,
      "name": "gamma",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "p1 (pid 1), p1t0 (tid 0)",
  "stacks": Array [
    "gamma 1.00µs",
  ],
}
`;

exports[`importTraceEvents multiprocess 4`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "delta",
      "line": undefined,
      "name": "delta",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "p1 (pid 1), p1t1 (tid 1)",
  "stacks": Array [
    "delta 1.00µs",
  ],
}
`;

exports[`importTraceEvents multiprocess 5`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "epsilon",
      "line": undefined,
      "name": "epsilon",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "p2t0 (pid 2, tid 0)",
  "stacks": Array [
    "epsilon 1.00µs",
  ],
}
`;

exports[`importTraceEvents multiprocess 6`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "phi",
      "line": undefined,
      "name": "phi",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "p2t1 (pid 2, tid 1)",
  "stacks": Array [
    "phi 1.00µs",
  ],
}
`;

exports[`importTraceEvents multiprocess 7`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "zeta",
      "line": undefined,
      "name": "zeta",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "p3 (pid 3, tid 0)",
  "stacks": Array [
    "zeta 1.00µs",
  ],
}
`;

exports[`importTraceEvents multiprocess 8`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "eta",
      "line": undefined,
      "name": "eta",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "p3 (pid 3, tid 1)",
  "stacks": Array [
    "eta 1.00µs",
  ],
}
`;

exports[`importTraceEvents multiprocess: indexToView 1`] = `0`;

exports[`importTraceEvents multiprocess: profileGroup.name 1`] = `"multiprocess.json"`;

exports[`importTraceEvents not enough end events 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "A {\\"x\\":1}",
      "line": undefined,
      "name": "A {\\"x\\":1}",
      "selfWeight": 2,
      "totalWeight": 11,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "A {\\"x\\":2}",
      "line": undefined,
      "name": "A {\\"x\\":2}",
      "selfWeight": 9,
      "totalWeight": 10,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "A {\\"x\\":1} 1.00µs",
    "A {\\"x\\":1};A {\\"x\\":2} 9.00µs",
    "A {\\"x\\":1};A {\\"x\\":2};A {\\"x\\":1} 1.00µs",
  ],
}
`;

exports[`importTraceEvents not enough end events: indexToView 1`] = `0`;

exports[`importTraceEvents not enough end events: profileGroup.name 1`] = `"not-enough-end-events.json"`;

exports[`importTraceEvents not out-of-order 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "A",
      "line": undefined,
      "name": "A",
      "selfWeight": 2,
      "totalWeight": 10,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "B",
      "line": undefined,
      "name": "B",
      "selfWeight": 2,
      "totalWeight": 8,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "C",
      "line": undefined,
      "name": "C",
      "selfWeight": 6,
      "totalWeight": 6,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "A 1.00µs",
    "A;B 1.00µs",
    "A;B;C 6.00µs",
    "A;B 1.00µs",
    "A 1.00µs",
  ],
}
`;

exports[`importTraceEvents not out-of-order unbalanced name 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 1,
      "totalWeight": 10,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "beta",
      "line": undefined,
      "name": "beta",
      "selfWeight": 9,
      "totalWeight": 9,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "alpha 1.00µs",
    "alpha;beta 9.00µs",
  ],
}
`;

exports[`importTraceEvents not out-of-order unbalanced name: indexToView 1`] = `0`;

exports[`importTraceEvents not out-of-order unbalanced name: profileGroup.name 1`] = `"out-of-order-unbalanced-name.json"`;

exports[`importTraceEvents not out-of-order: indexToView 1`] = `0`;

exports[`importTraceEvents not out-of-order: profileGroup.name 1`] = `"out-of-order.json"`;

exports[`importTraceEvents only begin events 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "A {\\"x\\":1}",
      "line": undefined,
      "name": "A {\\"x\\":1}",
      "selfWeight": 1,
      "totalWeight": 2,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "B {\\"x\\":2}",
      "line": undefined,
      "name": "B {\\"x\\":2}",
      "selfWeight": 1,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "C {\\"x\\":2}",
      "line": undefined,
      "name": "C {\\"x\\":2}",
      "selfWeight": 0,
      "totalWeight": 0,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "A {\\"x\\":1} 1.00µs",
    "A {\\"x\\":1};B {\\"x\\":2} 1.00µs",
  ],
}
`;

exports[`importTraceEvents only begin events: indexToView 1`] = `0`;

exports[`importTraceEvents only begin events: profileGroup.name 1`] = `"only-begin-events.json"`;

exports[`importTraceEvents partial json import 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 2,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "beta",
      "line": undefined,
      "name": "beta",
      "selfWeight": 3,
      "totalWeight": 12,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "gamma {\\"detail\\":\\"foobar\\"}",
      "line": undefined,
      "name": "gamma {\\"detail\\":\\"foobar\\"}",
      "selfWeight": 5,
      "totalWeight": 5,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "epsilon",
      "line": undefined,
      "name": "epsilon",
      "selfWeight": 4,
      "totalWeight": 4,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "alpha 1.00µs",
    "alpha;beta 1.00µs",
    "alpha;beta;gamma {\\"detail\\":\\"foobar\\"} 5.00µs",
    "alpha;beta;epsilon 4.00µs",
    "alpha;beta 2.00µs",
    "alpha 1.00µs",
  ],
}
`;

exports[`importTraceEvents partial json import trailing comma 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 2,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "beta",
      "line": undefined,
      "name": "beta",
      "selfWeight": 3,
      "totalWeight": 12,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "gamma {\\"detail\\":\\"foobar\\"}",
      "line": undefined,
      "name": "gamma {\\"detail\\":\\"foobar\\"}",
      "selfWeight": 5,
      "totalWeight": 5,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "epsilon",
      "line": undefined,
      "name": "epsilon",
      "selfWeight": 4,
      "totalWeight": 4,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "alpha 1.00µs",
    "alpha;beta 1.00µs",
    "alpha;beta;gamma {\\"detail\\":\\"foobar\\"} 5.00µs",
    "alpha;beta;epsilon 4.00µs",
    "alpha;beta 2.00µs",
    "alpha 1.00µs",
  ],
}
`;

exports[`importTraceEvents partial json import trailing comma: indexToView 1`] = `0`;

exports[`importTraceEvents partial json import trailing comma: profileGroup.name 1`] = `"simple-partial-trailing-comma.json"`;

exports[`importTraceEvents partial json import whitespace padding 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 2,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "beta",
      "line": undefined,
      "name": "beta",
      "selfWeight": 3,
      "totalWeight": 12,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "gamma {\\"detail\\":\\"foobar\\"}",
      "line": undefined,
      "name": "gamma {\\"detail\\":\\"foobar\\"}",
      "selfWeight": 5,
      "totalWeight": 5,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "epsilon",
      "line": undefined,
      "name": "epsilon",
      "selfWeight": 4,
      "totalWeight": 4,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "alpha 1.00µs",
    "alpha;beta 1.00µs",
    "alpha;beta;gamma {\\"detail\\":\\"foobar\\"} 5.00µs",
    "alpha;beta;epsilon 4.00µs",
    "alpha;beta 2.00µs",
    "alpha 1.00µs",
  ],
}
`;

exports[`importTraceEvents partial json import whitespace padding: indexToView 1`] = `0`;

exports[`importTraceEvents partial json import whitespace padding: profileGroup.name 1`] = `"simple-partial-whitespace.json"`;

exports[`importTraceEvents partial json import: indexToView 1`] = `0`;

exports[`importTraceEvents partial json import: profileGroup.name 1`] = `"simple-partial.json"`;

exports[`importTraceEvents simple 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 2,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "beta",
      "line": undefined,
      "name": "beta",
      "selfWeight": 3,
      "totalWeight": 12,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "gamma {\\"detail\\":\\"foobar\\"}",
      "line": undefined,
      "name": "gamma {\\"detail\\":\\"foobar\\"}",
      "selfWeight": 5,
      "totalWeight": 5,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "epsilon",
      "line": undefined,
      "name": "epsilon",
      "selfWeight": 4,
      "totalWeight": 4,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "alpha 1.00µs",
    "alpha;beta 1.00µs",
    "alpha;beta;gamma {\\"detail\\":\\"foobar\\"} 5.00µs",
    "alpha;beta;epsilon 4.00µs",
    "alpha;beta 2.00µs",
    "alpha 1.00µs",
  ],
}
`;

exports[`importTraceEvents simple object 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 2,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "beta",
      "line": undefined,
      "name": "beta",
      "selfWeight": 8,
      "totalWeight": 12,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "(unnamed)",
      "line": undefined,
      "name": "(unnamed)",
      "selfWeight": 4,
      "totalWeight": 4,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "alpha 1.00µs",
    "alpha;beta 6.00µs",
    "alpha;beta;(unnamed) 4.00µs",
    "alpha;beta 2.00µs",
    "alpha 1.00µs",
  ],
}
`;

exports[`importTraceEvents simple object: indexToView 1`] = `0`;

exports[`importTraceEvents simple object: profileGroup.name 1`] = `"simple-object.json"`;

exports[`importTraceEvents simple: indexToView 1`] = `0`;

exports[`importTraceEvents simple: profileGroup.name 1`] = `"simple.json"`;

exports[`importTraceEvents unbalanced args 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "A {\\"x\\":1}",
      "line": undefined,
      "name": "A {\\"x\\":1}",
      "selfWeight": 2,
      "totalWeight": 10,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "A {\\"x\\":2}",
      "line": undefined,
      "name": "A {\\"x\\":2}",
      "selfWeight": 8,
      "totalWeight": 8,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "A {\\"x\\":1} 1.00µs",
    "A {\\"x\\":1};A {\\"x\\":2} 8.00µs",
    "A {\\"x\\":1} 1.00µs",
  ],
}
`;

exports[`importTraceEvents unbalanced args: indexToView 1`] = `0`;

exports[`importTraceEvents unbalanced args: profileGroup.name 1`] = `"unbalanced-args.json"`;

exports[`importTraceEvents unbalanced name 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 1,
      "totalWeight": 10,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "beta",
      "line": undefined,
      "name": "beta",
      "selfWeight": 9,
      "totalWeight": 9,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "alpha 1.00µs",
    "alpha;beta 9.00µs",
  ],
}
`;

exports[`importTraceEvents unbalanced name: indexToView 1`] = `0`;

exports[`importTraceEvents unbalanced name: profileGroup.name 1`] = `"unbalanced-name.json"`;
